pkl-core/src/test/files/LanguageSnippetTests/input/errors/reference17.pkl
import "pkl:ref"

import ".../input-helper/errors/ReferencedModuleWithOutputOverride.pkl"

class D extends ref.Domain {
  function referenceToString(data: Any, path: List<ref.Access>): String = throw("not supported")
}
local d: D = new {}

test = ref.Reference(d, ReferencedModuleWithOutputOverride.getClass(), "").output
